# gitma_canspin

./: .coveragerc  .gitignore  CITATION.cff  README.en.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
gitma_canspin/: __init__.py  _export_annotations.py  _gold_annotation.py  _helper.py  _metrics.py  _network.py  _vizualize.py  _write_annotation.py  annotation.py  annotation_collection.py  canspin.py  catma.py  project.py  tag.py  tagset.py
gitma_canspin/gui/: annotationanalyzer.py  annotationexporter.py  annotationmanipulator.py  main.py  projects.py
gitma_canspin/scripts/: gitma_CANSpiN.py
gitma_canspin/tests/canspin/: conftest.py  test_analyzer.py  test_canspin_project.py  test_exporter.py
gitma_canspin/tests/canspin/CATMA_5D2A90F0-4428-41CB-9D3A-E649CD1702C2_CANSpiN/collections/C_2BEB4951-CDA7-4549-927E-29E57337FEE5/: header.json
gitma_canspin/tests/canspin/CATMA_5D2A90F0-4428-41CB-9D3A-E649CD1702C2_CANSpiN/collections/C_31352347-83DF-4483-B21C-B31EEB4FBED7/: header.json
gitma_canspin/tests/canspin/CATMA_5D2A90F0-4428-41CB-9D3A-E649CD1702C2_CANSpiN/collections/C_5C0767FE-5750-415C-B539-5E070FC61C1F/: header.json
gitma_canspin/tests/canspin/CATMA_5D2A90F0-4428-41CB-9D3A-E649CD1702C2_CANSpiN/collections/C_7200D596-7417-49C4-9B93-09577EDE3928/: header.json
gitma_canspin/tests/canspin/CATMA_5D2A90F0-4428-41CB-9D3A-E649CD1702C2_CANSpiN/tagsets/T_0097E368-FA5D-44F6-9F12-B1CE7B65CE2E/: header.json
gitma_canspin/tests/canspin/canspin-deu-19/: corpus.yaml
gitma_canspin/tests/canspin/canspin-deu-19/cs1-tsv/: CANSpiN-deu-19_030_1-1-1.tsv
(+37 files in other folders)
